src/styles.scss
@import '~@angular/material/theming';

$montserrat-typography: mat-typography-config(
  $font-family: 'Montserrat',
);
@include mat-core($montserrat-typography);

$light-primary: mat-palette(
  (
    50: #e2eef0,
    100: #b6d4da,
    200: #85b8c2,
    300: #549ca9,
    400: #308696,
    500: #0b7184,
    600: #0a697c,
    700: #085e71,
    800: #065467,
    900: #034254,
    A100: #86dfff,
    A200: #53d2ff,
    A400: #20c4ff,
    A700: #07bdff,
    contrast: (
      50: #000000,
      100: #000000,
      200: #000000,
      300: #000000,
      400: #ffffff,
      500: #ffffff,
      600: #ffffff,
      700: #ffffff,
      800: #ffffff,
      900: #ffffff,
      A100: #000000,
      A200: #000000,
      A400: #000000,
      A700: #000000,
    ),
  )
);
$light-accent: mat-palette(
  (
    50: #fff2ea,
    100: #ffdfcb,
    200: #ffcaa9,
    300: #ffb486,
    400: #ffa46c,
    500: #ff9452,
    600: #ff8c4b,
    700: #ff8141,
    800: #ff7738,
    900: #ff6528,
    A100: #ffffff,
    A200: #ffffff,
    A400: #ffe0d5,
    A700: #ffcdbc,
    contrast: (
      50: #000000,
      100: #000000,
      200: #000000,
      300: #000000,
      400: #000000,
      500: #000000,
      600: #000000,
      700: #000000,
      800: #000000,
      900: #000000,
      A100: #000000,
      A200: #000000,
      A400: #000000,
      A700: #000000,
    ),
  )
);
$light-theme: mat-light-theme($light-primary, $light-accent);

.app-light-theme {
  @include angular-material-theme($light-theme);
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: 'Montserrat', Helvetica, sans-serif !important;
}

::-webkit-scrollbar {
  width: 0.5rem;
  height: 0.5rem;
}

::-webkit-scrollbar-track {
  background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  background: #529dff;
  &:hover {
    background: #ff9452;
  }
}

::-moz-selection {
  color: #fff;
  background: #000;
}

::selection {
  color: #fff;
  background: #000;
}

